fixed "wrapping" of the page title caused by the actions menu

--- a/intranett.theme/trunk/intranett/theme/skins/intranett_theme_styles/main.css
+++ b/intranett.theme/trunk/intranett/theme/skins/intranett_theme_styles/main.css
@@ -383,6 +383,7 @@ body > header nav li.selected a {
 .documentFirstHeading {
 	margin: 0;
 	padding: 0;
+	clear: right;
 	/*text-transform: uppercase;*/
 }
 .documentDescription {
